--- a/.github/workflows/backend_test.yml
+++ b/.github/workflows/backend_test.yml
@@ -1,29 +1,29 @@
-name: Python Tests
+# name: Python Tests
 
-on:
-  push:
-    branches: [ main,dev ]
-  pull_request:
-    branches: [ main,dev ]
+# on:
+#   push:
+#     branches: [ backend,main,dev ]
+#   pull_request:
+#     branches: [ main,dev ]
 
-jobs:
-  test:
-    runs-on: ubuntu-latest
+# jobs:
+#   test:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'  # або інша версія, яку ти використовуєш
+#       - name: Set up Python
+#         uses: actions/setup-python@v4
+#         with:
+#           python-version: '3.11'  # або інша версія, яку ти використовуєш
 
-      - name: Install dependencies
-        run: |
-          cd backend
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt 
+#       - name: Install dependencies
+#         run: |
+#           cd backend
+#           python -m pip install --upgrade pip
+#           pip install -r requirements.txt 
 
-      - name: Run tests
-        run: pytest
+#       - name: Run tests
+#         run: pytest
