Fix migration step in backend pipeline by adding missing directory change

--- a/.github/workflows/backend_piplen.yml
+++ b/.github/workflows/backend_piplen.yml
@@ -27,6 +27,7 @@ jobs:
       
       - name: Run migrations
         run: |
+          cd backend
           python models.py
           uvicorn main:app --reload  
           
